--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 gem install syntaxi
 gem install sqlite3-ruby (if you don't have it)
+
+An idea from Mike@AI - allow coding issues to surface through a chat like interface and reward help. Currently programs like Slack solve this issue, however they do not have the rewarding aspect.
