--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Bubbles (and Beers)
+===================
+the code in your head
+---------------------
+
+
 gem install syntaxi
 gem install sqlite3-ruby (if you don't have it)
 
